# PacketBuffer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: main.cpp
include/PacketBuffer/: ObjectSerializer.h  Packer.h  PacketBuffer.h  Unpacker.h
include/PacketBuffer/Serializer/: Enum.h  Std.h  TinyUTF8String.h
include/PacketBuffer/Serializer/Std/: Array.h  Chrono.h  Experimental.h  List.h  Map.h  Pair.h  Set.h  String.h  Tuple.h  Vector.h
include/PacketBuffer/Serializer/Std/Experimental/: Optional.h
tests/: Packer.cpp  Unpacker.cpp  main.cpp
tests/Serializer/Std/: Array.cpp  String.cpp
